// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AmeliproPagination > Snapshots > renders the component with all properties filled in 1`] = `
<nav
  aria-label="pagination"
  class="
    align-center
    amelipro-pagination
    d-flex
    justify-center
  "
  id="modified-unique-id-container"
>
  <ol
    class="
      amelipro-pagination__list
      d-flex
      list-style-none
    "
    id="modified-unique-id-list"
  >
    <li class="amelipro-pagination__item">
      <amelipro-pagination-btn-stub
        isactive="false"
        uniqueid="modified-unique-id-first"
      ></amelipro-pagination-btn-stub>
    </li>
    <!-- v-if -->
    <li class="amelipro-pagination__item">
      <amelipro-pagination-btn-stub
        isactive="true"
        uniqueid="modified-unique-id-middle-0"
      ></amelipro-pagination-btn-stub>
    </li>
    <li class="amelipro-pagination__item">
      <amelipro-pagination-btn-stub
        isactive="false"
        uniqueid="modified-unique-id-middle-1"
      ></amelipro-pagination-btn-stub>
    </li>
    <li class="amelipro-pagination__item">
      <amelipro-pagination-btn-stub
        isactive="false"
        title="page suivante"
        uniqueid="modified-unique-id-next"
      ></amelipro-pagination-btn-stub>
    </li>
    <li class="amelipro-pagination__item">
      <amelipro-pagination-btn-stub
        isactive="false"
        uniqueid="modified-unique-id-last"
      ></amelipro-pagination-btn-stub>
    </li>
  </ol>
</nav>
`;

exports[`AmeliproPagination > Snapshots > renders the component with only required properties filled in 1`] = `
<nav
  aria-label="pagination"
  class="
    align-center
    amelipro-pagination
    d-flex
    justify-center
  "
>
  <ol class="
    amelipro-pagination__list
    d-flex
    list-style-none
  ">
    <li class="amelipro-pagination__item">
      <amelipro-pagination-btn-stub isactive="true"></amelipro-pagination-btn-stub>
    </li>
    <!-- v-if -->
    <!-- v-if -->
    <li class="amelipro-pagination__item">
      <amelipro-pagination-btn-stub isactive="false"></amelipro-pagination-btn-stub>
    </li>
  </ol>
</nav>
`;

exports[`AmeliproPagination > render correctly 1`] = `
<nav
  aria-label="pagination"
  class="
    align-center
    amelipro-pagination
    d-flex
    justify-center
  "
  id="my-pagination-id-container"
>
  <ol
    class="
      amelipro-pagination__list
      d-flex
      list-style-none
    "
    id="my-pagination-id-list"
  >
    <li class="amelipro-pagination__item">
      <button
        aria-current="page"
        class="
          amelipro-btn
          amelipro-btn--style
          amelipro-pagination__btn
          bg-ap-blue-darken-1
          elevation-0
          v-btn
          v-btn--density-default
          v-btn--flat
          v-btn--size-default
          v-btn--variant-flat
          v-theme--light
        "
        id="my-pagination-id-first"
        style="height: auto; min-height: 2.5rem; color: #FFFFFF !important;"
        title="page active"
        type="button"
      >
        <span class="v-btn__overlay"></span>
        <span class="v-btn__underlay"></span>
        <!---->
        <span
          class="v-btn__content"
          data-no-activator=""
        >
          <span class="
            align-center
            amelipro-custom-btn
            d-flex
            flex-row
          ">
            <!-- v-if -->
            <!-- v-if -->
          </span>
        </span>
        <!---->
        <!---->
      </button>
    </li>
    <!-- v-if -->
    <!-- v-if -->
    <li class="amelipro-pagination__item">
      <button
        class="
          amelipro-btn
          amelipro-btn--style
          amelipro-pagination__btn
          bg-ap-white
          elevation-0
          v-btn
          v-btn--density-default
          v-btn--flat
          v-btn--size-default
          v-btn--variant-flat
          v-theme--light
        "
        id="my-pagination-id-last"
        style="height: auto; min-height: 2.5rem; color: #00749C !important;"
        type="button"
      >
        <span class="v-btn__overlay"></span>
        <span class="v-btn__underlay"></span>
        <!---->
        <span
          class="v-btn__content"
          data-no-activator=""
        >
          <span class="
            align-center
            amelipro-custom-btn
            d-flex
            flex-row
          ">
            <!-- v-if -->
            <!-- v-if -->
          </span>
        </span>
        <!---->
        <!---->
      </button>
    </li>
  </ol>
</nav>
`;
